--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/47ef0eeb2e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <h1>Budget Tracker</h1>
     <h3>Let's track your monthly budget...</h3>
+    <div class="container">
+      <i class="fa-solid fa-plus"></i>
+    </div>
   </body>
 </html>
