updated the index file

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <div class="input">
           <input type="text" placeholder="Enter Item..." id="item" />
           <input type="number" placeholder="Enter Amount..." id="amount" />
+          <button id="add-input">Add</button>
+        </div>
+        <div class="list-container">
+          <input type="text" id="output-item" />
+          <input type="number" id="output-number" />
         </div>
       </div>
     </div>
