--- a/index.html
+++ b/index.html
@@ -27,24 +27,7 @@
     <h3>Let's track your monthly budget...</h3>
     <div class="container">
       <i class="fa-solid fa-plus" id="add-btn"></i>
-      <div id="input-content-container">
-        <div class="salary">
-          <input
-            type="number"
-            id="total-salary"
-            placeholder="Enter your Salary..."
-          />
-        </div>
-        <div class="input">
-          <input type="text" placeholder="Enter Item..." id="item" />
-          <input type="number" placeholder="Enter Amount..." id="amount" />
-          <button id="add-input">Add</button>
-        </div>
-        <div class="list-container">
-          <input type="text" id="output-item" />
-          <input type="number" id="output-number" />
-        </div>
-      </div>
+      <div id="input-content-container"></div>
     </div>
     <script src="app.js"></script>
   </body>
