--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <h1>Budget Tracker</h1>
-    <h3>Let's track your monthly budget...</h3>
+    <h3>Let's track your monthly budget Bestie...</h3>
     <div class="container">
       <i class="fa-solid fa-plus" id="add-btn"></i>
       <div id="input-content-container"></div>
